Make markup XHTML 1.0 compliant. By Andrea 'Fyre Wyzard' Bocci <fwyzard@inwind.it>.

--- a/htdocs/badspammer.html
+++ b/htdocs/badspammer.html
@@ -1,25 +1,24 @@
-<HTML>
+<html>
 
-<HEAD>
-<TITLE>GCC</TITLE>
-</HEAD>
+<head>
+<title>GCC</title>
+</head>
 
-<BODY>
+<body>
 <h1 align="center"><a href="/index.html">GCC</a></h1>
 
 <h1>Spambot detected</h1>
 
 <p>Hi, your web browser has triggered our spambot detection mechanism.
 A spambot is a computer program designed to scoop up e-mail addresses
-and bombard them with unsolicited advertisements.
+and bombard them with unsolicited advertisements.</p>
 
 <p>If we made a mistake, and you really are a human being, we apologize
 profusely.  It just happens that your browser looks VERY similar to a
 known spambot.  Please try using a different browser and you should have
-no problem connecting to the site.
+no problem connecting to the site.</p>
 
-<p>
-Have a good day (and die, spambots, die)
+<p>Have a good day (and die, spambots, die)</p>
 
-</BODY>
-</HTML>
+</body>
+</html>
