--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -22,9 +22,9 @@ particular release.  Information is also available on <a
 href="gcc-3.0/c99status.html">C99 support in GCC 3.0</a>, but not on
 the much more limited support in GCC 2.95.</p>
 
-<p>See below the table for further notes on some issues.
+<p>See below the table for further notes on some issues.</p>
 
-<table border>
+<table border="1">
 <tr><th>Feature</th>
     <th>Library Issue</th>
     <th>Done</th>
@@ -33,13 +33,13 @@ the much more limited support in GCC 2.95.</p>
 </tr>
 
 <tr><td><em>restricted character set support via digraphs and
-    <br><code>&lt;iso646.h&gt;</code> (originally specified in AMD1)</em></td>
+    <br /><code>&lt;iso646.h&gt;</code> (originally specified in AMD1)</em></td>
     <td></td>
     <td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>wide character library support in
-    <code>&lt;wchar.h&gt;</code><br>and <code>&lt;wctype.h&gt;</code>
+    <code>&lt;wchar.h&gt;</code><br />and <code>&lt;wctype.h&gt;</code>
     (originally specified in AMD1)</em></td>
     <td>Library Issue</td>
     <td></td><td></td><td>Missing</td>
@@ -64,7 +64,7 @@ the much more limited support in GCC 2.95.</p>
     <td></td><td>Done</td><td></td><td></td>
 </tr>
 
-<tr><td><em><code>static</code> and type qualifiers<br>in parameter array declarators</em></td>
+<tr><td><em><code>static</code> and type qualifiers<br />in parameter array declarators</em></td>
     <td></td><td>Done</td><td></td><td></td>
 </tr>
 
@@ -88,7 +88,7 @@ the much more limited support in GCC 2.95.</p>
     <td></td><td></td>
 </tr>
 
-<tr><td><em>additional floating-point characteristics<br>in <code>&lt;float.h&gt;</code></em></td>
+<tr><td><em>additional floating-point characteristics<br />in <code>&lt;float.h&gt;</code></em></td>
     <td></td><td>Done</td>
     <td></td><td></td>
 </tr>
@@ -111,7 +111,7 @@ the much more limited support in GCC 2.95.</p>
 </tr>
 
 <tr><td><em>hexadecimal floating-point constants and
-    <code>%a</code><br> and <code>%A</code>
+    <code>%a</code><br /> and <code>%A</code>
     <code>printf</code>/<code>scanf</code> conversion specifiers</em></td>
     <td>Library Issue</td><td>Done</td>
     <td></td><td></td>
@@ -147,7 +147,7 @@ the much more limited support in GCC 2.95.</p>
     <td></td><td></td>
 </tr>
 
-<tr><td><em>preprocessor arithmetic<br>done in <code>intmax_t</code>/<code>uintmax_t</code></em></td>
+<tr><td><em>preprocessor arithmetic<br />done in <code>intmax_t</code>/<code>uintmax_t</code></em></td>
     <td></td><td></td><td>Broken</td><td></td>
 </tr>
 
@@ -155,7 +155,7 @@ the much more limited support in GCC 2.95.</p>
     <td></td><td>Done</td><td></td><td></td>
 </tr>
 
-<tr><td><em>new block scopes for selection<br>and iteration statements</em></td>
+<tr><td><em>new block scopes for selection<br />and iteration statements</em></td>
     <td></td><td>Done</td><td></td><td></td>
 </tr>
 
@@ -173,7 +173,7 @@ the much more limited support in GCC 2.95.</p>
 </tr>
 
 <tr><td><em>the <code>vscanf</code> family of functions
-    in<br><code>&lt;stdio.h&gt;</code> and <code>&lt;wchar.h&gt;</code></em></td>
+    in<br /><code>&lt;stdio.h&gt;</code> and <code>&lt;wchar.h&gt;</code></em></td>
     <td>Library Issue</td>
     <td>Done</td><td></td><td></td>
 </tr>
@@ -183,12 +183,12 @@ the much more limited support in GCC 2.95.</p>
     <td></td><td></td><td>Missing</td>
 </tr>
 
-<tr><td><em>floating-point environment access<br>in <code>&lt;fenv.h&gt;</code></em></td>
+<tr><td><em>floating-point environment access<br />in <code>&lt;fenv.h&gt;</code></em></td>
     <td>Library Issue</td>
     <td></td><td></td><td></td>
 </tr>
 
-<tr><td><em>IEC 60559 (also known as<br>IEC 559 or IEEE arithmetic) support</em></td>
+<tr><td><em>IEC 60559 (also known as<br />IEC 559 or IEEE arithmetic) support</em></td>
     <td></td><td></td><td>Broken</td><td></td>
 </tr>
 
@@ -197,7 +197,7 @@ the much more limited support in GCC 2.95.</p>
     <td></td><td></td>
 </tr>
 
-<tr><td><em><code>%lf</code> conversion specifier<br>allowed in <code>printf</code></em></td>
+<tr><td><em><code>%lf</code> conversion specifier<br />allowed in <code>printf</code></em></td>
     <td>Library Issue</td><td>Done</td><td></td><td></td>
 </tr>
 
@@ -224,7 +224,7 @@ the much more limited support in GCC 2.95.</p>
     <td></td><td>Done</td><td></td><td></td>
 </tr>
 
-<tr><td><em>new struct type compatibility<br>rules (tag compatibility)</em></td>
+<tr><td><em>new struct type compatibility<br />rules (tag compatibility)</em></td>
     <td></td><td>Done</td><td></td><td></td>
 </tr>
 
@@ -253,12 +253,12 @@ the much more limited support in GCC 2.95.</p>
     <td>Library Issue</td><td>Done</td><td></td><td></td>
 </tr>
 
-<tr><td><em>deprecate <code>ungetc</code> at the<br>beginning of a binary file</em></td>
+<tr><td><em>deprecate <code>ungetc</code> at the<br />beginning of a binary file</em></td>
     <td>Library Issue</td>
     <td></td><td></td><td></td>
 </tr>
 
-<tr><td><em>remove deprecation of<br>aliased array parameters</em></td>
+<tr><td><em>remove deprecation of<br />aliased array parameters</em></td>
     <td></td><td>Done</td>
     <td></td><td></td>
 </tr>
@@ -268,7 +268,7 @@ the much more limited support in GCC 2.95.</p>
     <td></td><td></td>
 </tr>
 
-<tr><td><em>relaxed constraints on aggregate<br>and union initialization</em></td>
+<tr><td><em>relaxed constraints on aggregate<br />and union initialization</em></td>
     <td></td><td>Done</td>
     <td></td><td></td>
 </tr>
@@ -279,7 +279,7 @@ the much more limited support in GCC 2.95.</p>
 </tr>
 
 <tr><td><em><code>return</code> without expression not permitted
-    in<br>function that returns a value (and vice versa)</em></td>
+    in<br />function that returns a value (and vice versa)</em></td>
     <td></td><td>Done</td>
     <td></td><td></td>
 </tr>
