--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -190,6 +190,7 @@ and code.  The following table lists some simple cases:</p>
     <td>American spelling (in particular -ize, -or)</td>
     <td>British spelling (in particular -ise, -our)</td>
     <td></td>
+  </tr>
   <tr>
     <td>"32-bit" (adjective)</td>
     <td>"32 bit"</td>
@@ -295,7 +296,7 @@ noted:</p>
   (<code>--</code> (two hyphens) for an en dash and <code>---</code>
   (three hyphens) for an em dash) should be used; normally these
   dashes should not have whitespace on either side.  Minus signs
-  should be written as <code>@minus{}</code>.
+  should be written as <code>@minus{}</code>.</li>
 
   <li>For an ellipsis, <code>@dots{}</code> should be used; for a
   literal sequence of three dots in a programming language, the dots
