--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -74,7 +74,7 @@ consist of bootstrapping the compiler (unless that is impossible for
 the microprocessor selected) and checking that there are no new
 regression test failures.  It is acceptable to <a
 href="simtest-howto.html">use a simulator</a> for
-validation; the use of real hardware is not required.</p>
+validation; the use of real hardware is not required.</li>
 </ul>
 
 <p><strong>Rationale</strong></p>
@@ -218,7 +218,7 @@ spending undue amounts of time on release testing and packaging.</p>
 <h3>Calendar</h3>
 
 <p>Here is a timeline of recent and upcoming branchpoints (for releases,
-stages of development, bugfixes, etc), resulting from the development plan:
+stages of development, bugfixes, etc), resulting from the development plan:</p>
 <pre>
 
   ... former releases ...
@@ -260,15 +260,14 @@ stages of development, bugfixes, etc), resulting from the development plan:
        :                                          :
 
 </pre>
-</p>
 
-<hr>
+<hr />
 
-<p id="1">[1] Note that no distinction is made between patches which are
+<p id="one">[1] Note that no distinction is made between patches which are
 themselves buggy and patches which expose "latent" bugs elsewhere in
 the compiler.</p>
 
-<p id="2">[2] The Steering Committee is planning to prepare a list of such
+<p id="two">[2] The Steering Committee is planning to prepare a list of such
 targets.  The list will be revised at the beginning of each release
 cycle, if necessary.</p>
 
