--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -47,16 +47,16 @@ be a good testsuite for the compiler...</p>
 
 <h2>
 Bounds checking patches for
-<A HREF="http://web.inter.NL.net/hcc/Haj.Ten.Brugge/">GCC releases</A>
+<a href="http://web.inter.NL.net/hcc/Haj.Ten.Brugge/">GCC releases</a>
 and
-<A HREF="ftp://nscs.fast.net/pub/binaries/boundschecking">GCC snapshots</A>
+<a href="ftp://nscs.fast.net/pub/binaries/boundschecking">GCC snapshots</a>
 </h2>
 
 <p>These patches add a <code>-fbounds-checking</code> flag that
 adds bounds checking tests to pointer and array accesses.
 Richard Jones developed the
-<A HREF="http://www-ala.doc.ic.ac.uk/~phjk/BoundsChecking.html">
-patches against gcc-2.7</A> in 1995.
+<a href="http://www-ala.doc.ic.ac.uk/~phjk/BoundsChecking.html">
+patches against gcc-2.7</a> in 1995.
 Herman ten Brugge is the current maintainer and has updated the patches for
 gcc-2.95.2.
 <a href="mailto:william@nscs.fast.net">William Bader</a> has unofficial
@@ -69,8 +69,8 @@ invalid calls against checked memory objects, even from modules
 compiled without bounds checking.</p>
 
 <p>Here is a
-<A HREF="ftp://nscs.fast.net/pub/binaries/boundschecking/example.html#Example">
-compilation and execution</A> of an example program.</p>
+<a href="ftp://nscs.fast.net/pub/binaries/boundschecking/example.html#Example">
+compilation and execution</a> of an example program.</p>
 
 <p>These patches are unrelated to the fat pointer bounds checking
 patches by Greg McGary &lt;gkm@eng.ascend.com&gt; which change the
@@ -93,7 +93,7 @@ StackGuard 1.21 is based on gcc-2.7.2.</p>
 (on x86 GNU/Linux, though possibly portable to other x86 POSIX targets).
 </p>
 
-<hr>
+<hr />
 
 
 <h1>GCC Museum</h1>
