--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -10,7 +10,7 @@
 <p>Currently the main GCC distribution contains front ends for C
 (gcc), C++ (g++), Objective C, Chill (unmaintained),
 Fortran (g77), Java (<a
-href="java/">GCJ</A>), and Ada (GNAT).  GCC 3.1 will be the first official
+href="java/">GCJ</a>), and Ada (GNAT).  GCC 3.1 will be the first official
 version of GCC to include the Ada front end.</p>
 
 <p>There are several more front ends for different languages that have
