--- a/htdocs/gccmission.html
+++ b/htdocs/gccmission.html
@@ -47,23 +47,23 @@ GCC.</p>
 <h2>Open Development Environment</h2>
 
 <ul>
-<li>Encourage cooperation and communication between developers.
-<li>Work more closely with "consumers".
+<li>Encourage cooperation and communication between developers.</li>
+<li>Work more closely with "consumers".</li>
 <li>Code available to everyone at any time, and everyone is
     welcome to participate in development.
  <ul>
  <li>Patches will be considered equally based on their
-     technical merits.
+     technical merits.</li>
  <li>All individuals and companies are welcome to contribute
-     as long as they accept the groundrules.
- </ul>
-<li>Open mailing lists.
+     as long as they accept the groundrules.</li>
+ </ul></li>
+<li>Open mailing lists.</li>
 <li>Developer friendly tools and procedures (i.e., cvs, multiple
-    maintainers, etc).
+    maintainers, etc).</li>
 <li>Conflicts of interest exist for many GCC developers; the
     developers as well as the <a href="steering.html">GCC Steering
     Committee</a> will not allow those conflicts of interest to have an
-    effect on the development of GCC.
+    effect on the development of GCC.</li>
 </ul>
 
 </body>
