--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -28,7 +28,7 @@ you when the status of your report changes.</p>
 
 <p>The bug report form provides a number of fields; you'll need to
 fill-out most of those (as indicated below) to provide a complete
-report. The fields have the following purpose:<p>
+report. The fields have the following purpose:</p>
 
 <dl>
 <dt><strong>Originator</strong></dt>
@@ -80,7 +80,7 @@ does not foo", "objc crashes when doing bar".</dd>
   <dd>GCC fails to bootstrap. This should be filed <em>only</em> if a
   bootstrap failure prevails for an extended period of time (at least
   one week) on any platform (and possibly not-so-common conditions like
-  a read-only srcdir), or non-mainstream platforms.
+  a read-only srcdir), or non-mainstream platforms.</dd>
   <dt>c++</dt>
   <dd>A problem with the C++ compiler.</dd>
   <dt>c</dt>
