--- a/htdocs/gnatswrite.html
+++ b/htdocs/gnatswrite.html
@@ -36,13 +36,13 @@ build to your <code>load-path</code> in order to pick up the gnats library.
 <p>Finally, add the following entries to your <code>.emacs</code> file</p>
 
 <blockquote><code>
-  (load-library "gnats")<BR>
-  (setq gnats:network-server "gcc.gnu.org")<BR>
-  (setq gnats:userid "YourUserName")<BR>
-  (setq gnats:password "YourGNATSPassword")<BR>
-  (setq gnats:alias "gcc")<BR>
+  (load-library "gnats")<br />
+  (setq gnats:network-server "gcc.gnu.org")<br />
+  (setq gnats:userid "YourUserName")<br />
+  (setq gnats:password "YourGNATSPassword")<br />
+  (setq gnats:alias "gcc")<br />
   (autoload 'edit-pr "gnats"
-            "Command to edit a problem report." t)<BR>
+            "Command to edit a problem report." t)<br />
   (autoload 'query-pr "gnats"
             "Command to query information about problem reports." t)
 </code></blockquote>
