--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -164,36 +164,36 @@ lists via this form:</p>
 <form method="get" action="http://gcc.gnu.org/cgi-bin/ml-request">
   Mailing list: 
   <select name="listname">
-   <option value="gcc-announce">gcc-announce
-   <option value="gcc">gcc
-   <option value="gcc-help">gcc-help
-   <option value="gcc-bugs">gcc-bugs
-   <option value="gcc-patches">gcc-patches
-   <option value="gcc-testresults">gcc-testresults
-   <option value="gcc-prs">gcc-prs
-   <option value="gcc-cvs">gcc-cvs
-   <option value="gcc-cvs-wwwdocs">gcc-cvs-wwwdocs
-   <option value="gcc-regression">gcc-regression
-   <option value="libstdc++">libstdc++
-   <option value="libstdc++-cvs">libstdc++-cvs
-   <option value="java-announce">java-announce
-   <option value="java">java
-   <option value="java-patches">java-patches
-   <option value="java-prs">java-prs
-   <option value="java-cvs">java-cvs
+   <option value="gcc-announce">gcc-announce</option>
+   <option value="gcc">gcc</option>
+   <option value="gcc-help">gcc-help</option>
+   <option value="gcc-bugs">gcc-bugs</option>
+   <option value="gcc-patches">gcc-patches</option>
+   <option value="gcc-testresults">gcc-testresults</option>
+   <option value="gcc-prs">gcc-prs</option>
+   <option value="gcc-cvs">gcc-cvs</option>
+   <option value="gcc-cvs-wwwdocs">gcc-cvs-wwwdocs</option>
+   <option value="gcc-regression">gcc-regression</option>
+   <option value="libstdc++">libstdc++</option>
+   <option value="libstdc++-cvs">libstdc++-cvs</option>
+   <option value="java-announce">java-announce</option>
+   <option value="java">java</option>
+   <option value="java-patches">java-patches</option>
+   <option value="java-prs">java-prs</option>
+   <option value="java-cvs">java-cvs</option>
   </select>
- <br>
+ <br />
   Your e-mail address:
-  <input type="text" name="username" size="14">
- <br>
-  <input type="checkbox" name="digest">Digest version
+  <input type="text" name="username" size="14" />
+ <br />
+  <input type="checkbox" name="digest" />Digest version
   &nbsp;
   <select name="operation">
-    <option value="subscribe">subscribe
-    <option value="unsubscribe">unsubscribe
+    <option value="subscribe">subscribe</option>
+    <option value="unsubscribe">unsubscribe</option>
   </select>
   &nbsp;
- <input type="Submit" name="submit" value="Process that!">
+ <input type="submit" name="submit" value="Process that!" />
 </form>
 </blockquote>
 
@@ -219,17 +219,17 @@ List-Archive, etc.).</p>
 our lists into a single folder named INLIST.gcc:</p>
 
 <blockquote><code>
-:0<br>
-* ^Sender: .*-owner@gcc.gnu.org<br>
-INLIST.gcc<br>
+:0<br />
+* ^Sender: .*-owner@gcc.gnu.org<br />
+INLIST.gcc<br />
 </code></blockquote>
 
 <p>To filter duplicate messages due to cross-posts to multiple lists, you
 can use the following recipe (Use at your own risk!):</p>
 
 <blockquote><code>
-:0 Wh: msgid.lock<br>
-* ^Sender: .*-owner@gcc.gnu.org<br>
+:0 Wh: msgid.lock<br />
+* ^Sender: .*-owner@gcc.gnu.org<br />
 | formail -D 8192 msgid.cache
 </code></blockquote>
 
