--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -8,7 +8,7 @@
 <h1 align="center">GCC news and announcements</h1>
 
 <p>More current news items can be found on the <a href="index.html">GCC
-home page</a>.
+home page</a>.</p>
 
 <dl>
 
@@ -254,7 +254,7 @@ personnel, to manage the release.  Thanks!
 <p>
 The Steering Committee and the GCC community owe Jeff Law an immense
 debt for his work as release manager for the EGCS 1.0.x, 1.1.x, and
-GCC 2.95.x series of releases.  He has done an outstanding job.
+GCC 2.95.x series of releases.  He has done an outstanding job.</p>
 </dd>
 
 <dt><b>March 18, 2000</b></dt>
@@ -270,7 +270,7 @@ status (previously over <a href="http://xena.eas.asu.edu/~andy/">here</a>).
 Jim Wilson and Richard Henderson of Cygnus, a Red Hat company, and
 David Mosberger of HP labs have
 contributed a port for the Intel Itanium (aka IA-64) processor.
-<br><br>
+<br /><br />
 Jeff Law and Richard Henderson of Cygnus, a Red Hat company, have contributed
 RTL based tail call elimination optimizations.  Support currently exists for
 the Alpha, HPPA, ia32 and MIPS processors.  Long term the RTL based
@@ -433,7 +433,7 @@ You can find more information from the
 <a href="libstdc++/">libstdc++ project's home page</a>.
 
 <p>Cygnus Solutions has released libgcj
-version 2.95 Java runtime libraries for use with GCC 2.95.
+version 2.95 Java runtime libraries for use with GCC 2.95.</p>
 </dd>
 
 <dt><b>August 2, 1999</b></dt>
@@ -474,7 +474,7 @@ LinuxExpo to the appropriate lists,
 and Craig Burley has made Toon's notes available (in edited form) at <a
 href="http://world.std.com/~burley/bof.html">http://world.std.com/~burley/bof.html</a>.
 
-<br>Probably the most important decision reached at the meeting
+<br />Probably the most important decision reached at the meeting
 is that Craig Burley will undertake the long-awaited <q>0.6 rewrite</q>
 of the <code>g77</code> front end as his top priority for
 the <code>gcc</code> 3.0 release,
@@ -482,7 +482,7 @@ rather than focusing on implementing some of the <q>most wanted</q>
 features that didn't require the rewrite,
 such as Cray pointers.
 
-<br>The BOF provided us with
+<br />The BOF provided us with
 some additional information to guide future development of
 GNU Fortran.
 Thanks to all who attended, whether in person or in spirit!
@@ -514,10 +514,10 @@ Yes, it is not a hoax: The egcs steering committee is appointed official
 GNU maintainer for GCC; the egcs team will be responsible for rolling out
 future GCC releases.
 
-<br>This will require some changes in policy and procedures for the project.
+<br />This will require some changes in policy and procedures for the project.
 We will provide more information on those changes as they are available.
 
-<br><a href="http://www.gnu.org">www.gnu.org</a> has the FSF announcement
+<br /><a href="http://www.gnu.org">www.gnu.org</a> has the FSF announcement
 under the "GNU flashes" heading.
 </dd>
 
@@ -538,8 +538,8 @@ that tracks checkins to the egcs webpages CVS repository.
 <dd>
 Cygnus announces the first public
 release of libgcj, the runtime component of the GNU compiler for Java.
-<br><a href="news/javaannounce.html">Read the release announcement</a>.
-<br><a href="java/">Goto the libgcj homepage</a>.
+<br /><a href="news/javaannounce.html">Read the release announcement</a>.
+<br /><a href="java/">Goto the libgcj homepage</a>.
 </dd>
 
 <dt><b>April 6, 1999</b></dt>
@@ -714,11 +714,11 @@ framework</b></a>.
 
   <p>When a patch is checked into the CVS repository, a check-in notification
   message is automatically sent to the <b>gcc-cvs</b> mailing list.  This will
-  allow developers to monitor changes as they are made.
+  allow developers to monitor changes as they are made.</p>
 
   <p>Patch submissions should be sent to <b>egcs-patches</b> instead of the
   main egcs list.  This is primarily to help ensure that patch submissions do
-  not get lost in the large volume of the main mailing list.
+  not get lost in the large volume of the main mailing list.</p>
 </dd>
 
 <dt><b>May 18, 1998</b></dt>
