--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -15,7 +15,7 @@ our <a href="mirrors.html">mirror sites</a>.</p>
 <p><em>Important: because these are source releases, they will be
 of little use to you if you do not already have a C compiler on your
 machine.</em>  If you don't already have a compiler, you need pre-compiled
-binaries.
+binaries.</p>
 
 <p>To find pre-compiled binaries for various platforms, please
 refer to our <a href="http://gcc.gnu.org/install/binaries.html">binaries
@@ -31,7 +31,7 @@ opposed to development snapshots).</p>
 <p> After the April 1999 merger between GCC and EGCS, only a single version
 number is maintained.</p>
 
-<table border=1 cellspacing=0 cellpadding=5>
+<table border="1" cellspacing="0" cellpadding="5">
 <tr><th>Release Name</th><th>Version number</th><th>Release date</th></tr>
 
 <tr><td><a href="gcc-3.0/">GCC 3.0.3</a></td><td>3.0.3</td> <td>December 20, 2001</td></tr>
@@ -61,7 +61,7 @@ number is maintained.</p>
 
 <p>If you have evidence for a missing release date, please send it in.</p>
 
-<table border=1 cellspacing=0 cellpadding=5>
+<table border="1" cellspacing="0" cellpadding="5">
 <tr><th>GCC Version</th><th>Release date</th></tr>
 
 <tr><td>2.7.2.3</td><td>August 22, 1997</td></tr>
