--- a/htdocs/releasing.html
+++ b/htdocs/releasing.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">Rolling a GCC Release</h1>
+<h1>Rolling a GCC Release</h1>
 
 <ol>
 <li>Before rolling the release, update the release notes web pages and
@@ -43,7 +43,7 @@ branch tag should already be there).</li>
 <li>Update <code>~ftp/pub/gcc/README</code> and
 <code>~ftp/pub/gcc/releases/index.html</code>.</li>
 
-<li>Upload the release to <code>ftp.gnu.org</code>
+<li>Upload the release to <code>ftp.gnu.org</code>.</li>
 
 <li>Announce the release to the gcc-announce@gcc.gnu.org and gcc@gcc.gnu.org
 mailing lists.
@@ -60,3 +60,4 @@ before allowing any new checkins to the branch.</li>
 </ol>
 
 </body>
+</html>
