--- a/htdocs/rsync.html
+++ b/htdocs/rsync.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta name="description" content="Anonymous rsync read-only access to the GCC project.">
-<meta name="keywords" content="CVS, version control, GCC, source, public, repository, rsync">
+<meta name="description" content="Anonymous rsync read-only access to the GCC project." />
+<meta name="keywords" content="CVS, version control, GCC, source, public, repository, rsync" />
 <title>GCC: Anonymous read-only rsync access</title>
 </head>
 
@@ -24,23 +24,23 @@ which will take a substantial time to transfer.
 Subsequent synchronisations will be much faster though, as rsync uses
 a smart algorithm to only transfer differences over the network.</p>
 
-<p>Here is how you get a copy of the repository:
+<p>Here is how you get a copy of the repository:</p>
 <pre>
  % rsync --archive --delete --checksum --compress \
          --stats rsync://gcc.gnu.org/gcc-cvs .
 </pre>
-The same command can be run periodically to synchronize your copy of
+<p>The same command can be run periodically to synchronize your copy of
 the repository.</p>
 
 
 <p>You can get rsync from its home page, 
 <a href="http://rsync.samba.org">rsync.samba.org</a>.</p>
 
-<p>To get a list of available rsync targets, run:
+<p>To get a list of available rsync targets, run:</p>
 <pre>
  % rsync rsync://gcc.gnu.org/
 </pre>
-Other interesting data, such as the GCC gnats files and the GCC ftp
+<p>Other interesting data, such as the GCC gnats files and the GCC ftp
 directories are also available.</p>
 
 <h2>Using the local repository</h2>
