--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -31,8 +31,8 @@ diff files to update from one snapshot to the next.</p>
 <p>contrib/gcc_update can be used to apply diffs between successive
 snapshot versions and preserve relations between generated files so
 that autoconf, bison et al aren't needed. This is documented in
-comments in contrib/gcc_update. <BR> The file .brik provides a list of
-checksums of files in the snapshot, that may be checked using<BR>
+comments in contrib/gcc_update. <br /> The file .brik provides a list of
+checksums of files in the snapshot, that may be checked using<br />
 brik -C &lt; .brik</p>
 
 <p>In addition, some of our contributors also provide pre-built binaries
