--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -14,7 +14,7 @@ getting control over the project. Its primary purpose is to make major
 decisions in the best interests of the GCC project and to ensure that
 the project adheres to its fundamental principles found in the project's
 <a href="gccmission.html">mission statement</a>.  [see the original
-announcement below].
+announcement below].</p>
 
 <h2>GCC steering committee members</h2>
 
