--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -10,7 +10,7 @@
 <p>The latest version of this document is always available at
 <a href="http://www.gnu.org/software/gcc/bugs.html">http://www.gnu.org/software/gcc/bugs.html</a>.</p>
 
-<hr>
+<hr />
 
 <h2>Table of Contents</h2>
 <ul>
@@ -43,7 +43,7 @@
  </li>
 </ul>
 
-<hr>
+<hr />
 
 <h1><a name="report">Reporting Bugs</a></h1>
 
@@ -138,19 +138,19 @@ three of which can be obtained from the output of <code>gcc -v</code>:
 <a href="gnats.html">GCC GNATS bug database</a>.
 Only if this is not possible, mail all information to
 <a href="mailto:bug-gcc@gnu.org">bug-gcc@gnu.org</a> or
-<a href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a>.
+<a href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a>.</p>
 
 
 <h2><a name="detailed">Detailed bug reporting instructions</a></h2>
 
 <p>In general, all the information we need can be obtained by
 collecting the command line below, as well as its output and the
-preprocessed file it generates.
+preprocessed file it generates.</p>
 
 <blockquote><code>gcc -v -save-temps <i>all-your-options
 source-file</i></code></blockquote>
 
-Typically the preprocessed file (extension <code>.i</code> for C or
+<p>Typically the preprocessed file (extension <code>.i</code> for C or
 <code>.ii</code> for C++) will be large, so please compress the
 resulting file with one of the popular compression programs such as
 bzip2, gzip, zip or compress (in
@@ -229,7 +229,7 @@ contributors.</p>
 <li>Check in your fixes.</li>
 </ol>
 
-<hr>
+<hr />
 
 <h1><a name="known">Frequently Reported Bugs in GCC 3.0</a></h1>
 
@@ -247,7 +247,7 @@ such as Red Hat 7.0.  This is fixed in GCC 2.95.3 and GCC 3.0.</li>
 
 </ul>
 
-<hr>
+<hr />
 
 <h2><a name="fortran">Fortran</a></h2>
 
@@ -256,7 +256,7 @@ explicitly listed here.  Please see
 <a href="http://gcc.gnu.org/onlinedocs/g77_bugs.html">Known Causes of
 Trouble with GNU Fortran</a> in the G77 manual.</p>
 
-<hr>
+<hr />
 
 <h2><a name="c">C</a></h2>
 
@@ -267,7 +267,7 @@ often enough to warrant a mention here.</p>
 <dt><em>Cannot initialize a static variable with
 <code>stdin</code>.</em></dt>
 <dd><p>This has nothing to do with GCC, but people ask us about it a
-lot.  Code like this:
+lot.  Code like this:</p>
 
 <blockquote><code>
   #include &lt;stdio.h&gt;
@@ -275,7 +275,7 @@ lot.  Code like this:
   FILE *yyin = stdin;
 </code></blockquote>
 
-will not compile with GNU libc (GNU/Linux libc6), because
+<p>will not compile with GNU libc (GNU/Linux libc6), because
 <code>stdin</code> is not a constant.  This was done deliberately, to make
 it easier to maintain binary compatibility when the type <code>FILE</code>
 needs to be changed.  It is surprising for people used to traditional Unix
@@ -295,7 +295,7 @@ for details.
 </p></dd>
 
 <dt><em>Cannot use preprocessor directive in macro arguments.</em></dt>
-<dd><p>Let me guess... you wrote code that looks something like this:
+<dd><p>Let me guess... you wrote code that looks something like this:</p>
 <blockquote><code>
   memcpy(dest, src,
 #ifdef PLATFORM1
@@ -305,24 +305,24 @@ for details.
 #endif
 	);
 </code></blockquote>
-and you got a whole pile of error messages:
+<p>and you got a whole pile of error messages:</p>
 <blockquote><code>
 
 test.c:11: warning: preprocessing directive not recognized within
-macro arg<br>
+macro arg<br />
 test.c:11: warning: preprocessing directive not recognized within
-macro arg<br>
+macro arg<br />
 test.c:11: warning: preprocessing directive not recognized within
-macro arg<br>
-test.c: In function `foo':<br>
-test.c:6: undefined or invalid # directive<br>
-test.c:8: undefined or invalid # directive<br>
-test.c:9: parse error before `24'<br>
-test.c:10: undefined or invalid # directive<br>
-test.c:11: parse error before `#'<br>
+macro arg<br />
+test.c: In function `foo':<br />
+test.c:6: undefined or invalid # directive<br />
+test.c:8: undefined or invalid # directive<br />
+test.c:9: parse error before `24'<br />
+test.c:10: undefined or invalid # directive<br />
+test.c:11: parse error before `#'<br />
 </code></blockquote>
 
-The problem, simply put, is that GCC's preprocessor does not allow you
+<p>The problem, simply put, is that GCC's preprocessor does not allow you
 to put <code>#ifdef</code> (or any other directive) inside the arguments of
 a macro.  Your C library's <code>&lt;string.h&gt;</code> happens to
 define <code>memcpy</code> as a macro - this is perfectly legitimate.
@@ -344,35 +344,35 @@ construct immediately so that it is found and fixed.</p>
 <p>Second, it is extraordinarily difficult to implement the
 preprocessor such that it does what you would expect for every
 possible directive found inside a macro argument.  The best example is
-perhaps
+perhaps</p>
 <blockquote><code>
-#define foo(arg) ... arg ...<br>
-foo(blah<br>
-#undef foo<br>
-blah)<br>
+#define foo(arg) ... arg ...<br />
+foo(blah<br />
+#undef foo<br />
+blah)<br />
 </code></blockquote>
-which is <em>impossible</em> to implement in portable C without
+<p>which is <em>impossible</em> to implement in portable C without
 leaking memory.  Allowing only a subset of directives would be
 confusing.</p>
 
 <p>It is always possible to rewrite code which uses conditionals
 inside macros so that it doesn't.  You could write the above
-example
+example</p>
 <blockquote><code>
-#ifdef PLATFORM1<br>
-   memcpy(dest, src, 12);<br>
-#else<br>
-   memcpy(dest, src, 24);<br>
-#endif<br>
+#ifdef PLATFORM1<br />
+   memcpy(dest, src, 12);<br />
+#else<br />
+   memcpy(dest, src, 24);<br />
+#endif<br />
 </code></blockquote>
-This is a bit more typing, but I personally think it's better style
+<p>This is a bit more typing, but I personally think it's better style
 in addition to being more portable.</p>
 
 <p>In recent versions of glibc, <code>printf</code> is among the
 functions which are implemented as macros.</p></dd>
 </dl>
 
-<hr>
+<hr />
 
 <h2><a name="cplusplus">C++</a></h2>
 
@@ -381,7 +381,7 @@ are reported very often, but not yet fixed. While it is certainly
 better to fix bugs instead of documenting them, this document might
 save people the effort of writing a bug report when the bug is already
 well-known.  <a href="#report">How to report bugs</a> tells you how to
-report a bug.
+report a bug.</p>
 
 <p>There are many reasons why reported bugs don't get fixed. It might
 be difficult to fix, or fixing it might break compatibility. Often,
@@ -391,7 +391,7 @@ particular, bugs caused by invalid C++ code have a simple work-around,
 for C++, the compiler has a definitive document to adhere to. Earlier
 versions might have accepted source code that is <em>no longer</em>
 C++. This means that code which might have `worked' in a previous
-version, is now rejected. You should update your code to be C++.
+version, is now rejected. You should update your code to be C++.</p>
 
 <p>You should try to use the latest stable release of the GNU C++
 compiler. This is currently 3.0. Many commonly reported bugs in
@@ -415,30 +415,30 @@ respectively).</p>
 
 <li>The ABI has changed. This means that both class layout and name
 mangling is different. You <em>must</em> recompile all c++ libraries (if
-you don't you will get link errors).
+you don't you will get link errors).</li>
 
 <li>The standard library is much more conformant, and uses the
-<code>std::</code> namespace.
+<code>std::</code> namespace.</li>
 
 <li><code>std::</code> is now a real namespace, not an alias for
-<code>::</code>.
+<code>::</code>.</li>
 
 <li>The standard header files for the c library don't end with
 <code>.h</code>, but begin with <code>c</code> (i.e.
 <code>&lt;cstdlib&gt;</code> rather than <code>&lt;stdlib.h&gt;</code>).
-The <code>.h</code> names are still available, but are deprecated.
+The <code>.h</code> names are still available, but are deprecated.</li>
 
 <li><code>&lt;strstream&gt;</code> is deprecated, use
-<code>&lt;sstream&gt;</code> instead.
+<code>&lt;sstream&gt;</code> instead.</li>
 
 <li><code>streambuf::seekoff</code> &amp;
 <code>streambuf::seekpos</code> are private, instead use
 <code>streambuf::pubseekoff</code> &amp;
-<code>streambuf::pubseekpos</code> respectively.
+<code>streambuf::pubseekpos</code> respectively.</li>
 
 <li>If <code>std::operator &lt;&lt; (std::ostream &amp;, long long)</code>
 doesn't exist, you need to recompile libstdc++ with
-<code>--enable-long-long</code>.
+<code>--enable-long-long</code>.</li>
 
 </ul>
 
@@ -450,17 +450,17 @@ several ways to do this,
 <ul>
 
 <li>Say, <code>std::strcmp</code> at the call. This is the most explicit
-way of saying what you mean.
+way of saying what you mean.</li>
 
 <li>Say, <code>using std::strcmp;</code> somewhere before the call. You
 will need to do this for each function or type you wish to use from the
-standard library.
+standard library.</li>
 
 <li>Say, <code>using namespace std;</code> somewhere before the call.
 This is the quick-but-dirty fix. This brings the <em>whole</em> of the
 <code>std::</code> namespace into scope. <em>Never</em> do this in a
 header file, as you will be forcing users of your header file to do the
-same.
+same.</li>
 
 </ul>
 
@@ -473,11 +473,11 @@ Rather than fix them in subsequent 3.0 dot releases we have decided
 to fix these in the 3.1 development series. History has shown that it
 was a mistake to make ABI changes in dot releases. Also, the standard
 library will also change in the 3.1 series, which is effective as
-changing the ABI.
+changing the ABI.</p>
 
 <dl>
 
-<dt><em>Complicated virtual inheritance segfaults</em>
+<dt><em>Complicated virtual inheritance segfaults</em></dt>
 
 <dd>Some instances of complicated virtual inheritance crash when
 executing the constructor. We believe some cases to be already existing
@@ -485,11 +485,11 @@ in g++ 2.95, bug that generated incorrect code that didn't happen to
 crash. Other cases concern polymophic virtual base classes with no
 data members (so called nearly empty bases). You might be able to work
 around the problem by adding a dummy data member. GNATS PRs 3598, 3290,
-3145 &amp; 2811 track these issues.
+3145 &amp; 2811 track these issues.</dd>
 
 <dt><em>Base classes with <code>operator delete [] (void *, size_t)</code>
 sometimes did not get the correct size passed when deleting a derived
-object</em>
+object</em></dt>
 
 <dd>This is a long standing G++ bug, that should have been fixed by the
 new ABI. Unfortunately it did not, and requires an ABI change to fix.
@@ -498,14 +498,14 @@ delete[] (void *)</code> is provided. Although the produced code
 functions, it is incompatible with the ABI. GNATS PR 113 tracked this,
 which is now fixed in the 3.1 tree with 
 <a href="http://gcc.gnu.org/ml/gcc-patches/2001-07/msg01302.html">
-this patch</a>.
+this patch</a>.</dd>
 
-<dt><em>Covariant return types</em>
+<dt><em>Covariant return types</em></dt>
 
 <dd>We do not implement non-trivial covariant returns. We also generate
 incorrect virtual function tables for trivial covariance. Although
 trivial covariance will work, it is incompatible with the ABI. GNATS PR
-3706 tracks this problem.
+3706 tracks this problem.</dd>
 
 </dl>
 
@@ -532,14 +532,14 @@ an exception specification.</p></dd>
 <dt><em>G++ emits two copies of constructors and destructors.</em></dt>
 
 <dd><p>In general there are <em>three</em> types of constructors (and
-destructors).
+destructors).</p>
 <ol>
-<li>The complete object constructor/destructor.
-<li>The base object constructor/destructor.
-<li>The allocating destructor/deallocating destructor.
+<li>The complete object constructor/destructor.</li>
+<li>The base object constructor/destructor.</li>
+<li>The allocating destructor/deallocating destructor.</li>
 </ol>
-The first two are different, when virtual base classes are involved.
-In some cases we can do better, and this is logged in GNATS.</p>
+<p>The first two are different, when virtual base classes are involved.
+In some cases we can do better, and this is logged in GNATS.</p></dd>
 
 <dt><em>Exceptions don't work in multithreaded applications.</em></dt>
 
@@ -550,6 +550,7 @@ catch it in another. You cannot throw an exception from a signal
 handler, and catch it in the main thread.</p></dd>
 
 <dt><em>Global destructors are not run in the correct order.</em></dt>
+
 <dd><p>Global destructors should be run in the reverse order of their
 constructors <em>completing</em>. In most cases this is the same as
 the reverse order of constructors <em>starting</em>, but sometimes it
@@ -561,21 +562,21 @@ equivalent).</p></dd>
 
 <dt><em>Problems with floating point computations.</em></dt>
 <dd><p>In a number of cases, GCC appears to perform floating point
-computations incorrectly. For example, the program
+computations incorrectly. For example, the program</p>
 <blockquote><code>
-#include &lt;iostream&gt;<br>
-<br>
-int main() {<br>
-<br>
- double min = 0.0;<br>
- double max = 0.5;<br>
- double width = 0.01;<br>
+#include &lt;iostream&gt;<br />
+<br />
+int main() {<br />
+<br />
+ double min = 0.0;<br />
+ double max = 0.5;<br />
+ double width = 0.01;<br />
  std::cout &lt;&lt; (int)(((max - min) / width) - 1) &lt;&lt;
- std::endl;<br>
-<br>
-}<br>
+ std::endl;<br />
+<br />
+}<br />
 </code></blockquote>
-might print 50 on some systems and optimization levels, and 51 on
+<p>might print 50 on some systems and optimization levels, and 51 on
 others.</p>
 
 <p>The is the result of <em>rounding</em>: The computer cannot
@@ -635,8 +636,8 @@ void foo(){
 }
 </pre>
 The problem is that GCC starts to parse the declaration of
-<CODE>b</CODE> as a function <CODE>b</CODE> returning <CODE>B</CODE>,
-taking a function returning <CODE>A</CODE> as an argument. When it
+<code>b</code> as a function <code>b</code> returning <code>B</code>,
+taking a function returning <code>A</code> as an argument. When it
 sees the 1, it is too late. The work-around in these cases is to add
 additional parentheses around the expressions that are mistaken as
 declarations:
@@ -650,8 +651,8 @@ can be used:
   B b((0,A()),A(1));
 </pre>
 <p>
-Another example is the parse error for the <CODE>return</CODE>
-statement in
+Another example is the parse error for the <code>return</code>
+statement in</p>
 <pre>
 struct A{};
 
@@ -667,19 +668,19 @@ A B::f1(bool b)
   return a;
 }
 </pre>
-<p>The problem is that the compiler interprets <CODE>A()</CODE> as a
-function (taking no arguments, returning <CODE>A</CODE>), and
-<CODE>(A()</CODE>) as a cast - with a missing expression, hence the
-parse error. The work-around is to omit the parentheses:
+<p>The problem is that the compiler interprets <code>A()</code> as a
+function (taking no arguments, returning <code>A</code>), and
+<code>(A()</code>) as a cast - with a missing expression, hence the
+parse error. The work-around is to omit the parentheses:</p>
 <pre>
   if (b)
     return A(); 
 </pre>
-<p>This problem occurs in a number of variants; in <CODE>throw</CODE>
+<p>This problem occurs in a number of variants; in <code>throw</code>
 statements, people also frequently put the object in parentheses. The
 exact error also somewhat varies with the compiler version. The
 work-arounds proposed do not change the semantics of the program at
-all; they make them perhaps less readable.
+all; they make them perhaps less readable.</p>
 
 <h3><a name="-O3">Optimization at <code>-O3</code> takes a
 very long time</a></h3>
