--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta name="description" content="Anonymous read-only access to the GCC project CVS source repository.">
-<meta name="keywords" content="CVS, version control, GCC, source, public, repository">
+<meta name="description" content="Anonymous read-only access to the GCC project CVS source repository." />
+<meta name="keywords" content="CVS, version control, GCC, source, public, repository" />
 <title>GCC: Anonymous read-only CVS access</title>
 </head>
 
@@ -11,12 +11,12 @@
 
 <p>In an ongoing effort to accelerate development of GCC and provide an
 open development environment, we are making our CVS source repository
-available read-only to the public at large.
+available read-only to the public at large.</p>
 
 <p>That way you can pick up any version (including releases) of GCC that
-is in our repository or our <a href="#wwwdocs">web pages</a>.
+is in our repository or our <a href="#wwwdocs">web pages</a>.</p>
 
-<p>In addition, you can browse our CVS history online at
+<p>In addition, you can browse our CVS history online at</p>
 
 <ul>
   <li><a href="http://subversions.gnu.org/cgi-bin/viewcvs/gcc/">subversions.gnu.org</a>
@@ -30,10 +30,10 @@ is in our repository or our <a href="#wwwdocs">web pages</a>.
 
 <p>If you don't already have CVS, we recommend you pick up a recent copy
 from <a href="http://www.cvshome.org/">CVShome.org</a>. (Note that
-CVS versions up to 1.10.4 have "Y2K problems".)
+CVS versions up to 1.10.4 have "Y2K problems".)</p>
 
 <p>Assuming you have CVS installed on your machine you can check out the 
-GCC sources with the following sequence of commands:
+GCC sources with the following sequence of commands:</p>
 
 <p>Set CVSROOT in your environment to
 <code>:pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc</code>.
@@ -45,15 +45,15 @@ before any other arguments).</p>
 <p>Issue the command <code>cvs login</code>.  You will be prompted for
 a password; reply with the empty string.</p>
 
-<p>Issue the command 
+<p>Issue the command </p>
 <blockquote><p><code>cvs -z 9 co gcc</code></p></blockquote>
 to check out the compiler sources, respectively
 <blockquote><p><code>cvs -z 9 co wwwdocs</code></p></blockquote>
-to check out our web pages.
+<p>to check out our web pages.</p>
 
 <p>Once you've got the repository checked out, <code>cvs update</code>
 will sync your local copy with the repository.  See the CVS manual for
-additional information on how to use CVS.
+additional information on how to use CVS.</p>
 
 
 <h3><a name="generated_files"></a>Generated files</h3>
@@ -93,7 +93,7 @@ are often already available on many  systems, and can often be found
 already built for some systems.  A partial list of these build tools
 is: Autoconf, Bison, Xgettext, Automake, and Gperf.</p>
 
-<hr>
+<hr />
 <h2>Conflicts when using <code>cvs update</code></h2>
 
 <p>It is not uncommon to get CVS conflict messages for some generated files
@@ -108,13 +108,13 @@ or the generator files, it is safe to delete the offending file, then run
 <h3>CVS tags and checkouts</h3>
 
 <p> You can check out the latest version of the GCC 3.0 release
-branch with the following command:
+branch with the following command:</p>
 
 <blockquote><p><code>cvs -z 9 co -rgcc-3_0-branch gcc</code></p></blockquote>
 
 <p>By changing the <code>-r</code> argument above you can check out
 particular releases or snapshots or the latest snapshot.  Other tags/branches
-you may want to check out include:
+you may want to check out include:</p>
 
 <ul>
   <li>gcc_latest_snapshot</li>
