--- a/htdocs/cvsup.html
+++ b/htdocs/cvsup.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta name="description" content="CVSup mirrors to the GCC project.">
-<meta name="keywords" content="CVS, version control, GCC, source, public, repository, mirrors, CVSup">
+<meta name="description" content="CVSup mirrors to the GCC project." />
+<meta name="keywords" content="CVS, version control, GCC, source, public, repository, mirrors, CVSup" />
 <title>GCC: Accessing the repository through CVSup</title>
 </head>
 
