--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -20,59 +20,59 @@ sites</a>.</p>
 <a href="cvsup.html">CVSup access</a>.</p>
 
 <ul>
-<li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/gcc/">mirror.aarnet.edu.au</a>
-<li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/gcc/">gd.tuwien.ac.at</a>
-<li>Belgium (Ghent) (releases only, no snapshots): <a href="ftp://chardonnay.elis.rug.ac.be/pub/mirrors/gcc.cygnus.com/pub/gcc/">chardonnay.elis.rug.ac.be</a>
-<LI>Brasil (releases only, no snapshots): <a href="ftp://ftp.softaplic.com.br/pub/sourceware/gcc/">ftp.softaplic.com.br</a>
-<li>China (Hong Kong): <a href="ftp://ftp.foruto.com/pub/gcc.gnu.org/gcc/">ftp.foruto.com</a>
-<li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/GNU/gcc/">sunsite.mff.cuni.cz</a>
-<li>Finland: <a href="ftp://ftp.funet.fi/pub/mirrors/sourceware.cygnus.com/pub/gcc/">ftp.funet.fi</a>
-<li>France (releases only, no snapshots): <a href="ftp://ftp.ilog.fr/pub/Mirrors/gcc/">ftp.ilog.fr</a>
-<li>France (releases only, no snapshots): <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
-<li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/gcc.gnu.org/gcc/">ftp.irisa.fr</a>
-<li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/egcs/">ftp.uvsq.fr</a>
-<li>France: <a href="ftp://ftp.grolier.fr/pub/egcs/">ftp.grolier.fr</a>
-<LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">ftp.fu-berlin.de</A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
-<LI>Germany: <A HREF="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a>
-<LI>Germany: <A HREF="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/egcs.cygnus.com/pub/gcc/">ftp.mpi-sb.mpg.de</a>
-<LI>Greece: <a href="ftp://ftp.ntua.gr/pub/gnu/egcs/">ftp.ntua.gr</a>,
-<LI>Japan: <A HREF="ftp://ftp.dti.ad.jp/pub/lang/egcs/">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!
-<li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs/">ftp.eos.hokudai.ac.jp</a>
-<li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs/">ftp.lab.kdd.co.jp</a>
-<LI>Japan: <A HREF="ftp://ftp.iij.ad.jp/pub/egcs/">ftp.iij.ad.jp</a>
-<li>Japan: <a href="ftp://ring.aist.go.jp/pub/lang/egcs/">ring.aist.go.jp</a>
-<li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs/">ring.etl.go.jp</a>
-<li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs/">ring.crl.go.jp</a>
-<li>Japan: <a href="ftp://core.ring.gr.jp/pub/lang/egcs/">core.ring.gr.jp</a>
-<li>Japan: <a href="ftp://ftp.ring.gr.jp/pub/lang/egcs/">ftp.ring.gr.jp</a>
-<li>Korea (Seoul): <a href="ftp://linux.sarang.net/mirror/development/compiler/egcs/">linux.sarang.net</a>
-<LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/mirror/languages/gcc">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!
-<LI>Norway: <a href="ftp://ftp.pvv.ntnu.no/pub/egcs/">ftp.pvv.ntnu.no</a>
-<LI>Poland: <A HREF="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs/">ftp.task.gda.pl</a>
-<LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a>
-<LI>Poland (Lodz): <A HREF="ftp://ftp.fic.uni.lodz.pl/pub/sources.redhat.com/pub/gcc/">ftp.fic.uni.lodz.pl</a>
-<LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs/">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
-<li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs/">ftp.nc.orc.ru</a>
-<li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs/">linux.ihep.su</a>
-<li>South Africa: <a href="ftp://ftp.sun.ac.za/cygnus/gcc/">ftp.sun.ac.za</a>
-<LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
-<LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a>
-<LI>Sweden: <A HREF="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a>
-<LI>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub3/CYGNUS/gcc/">ftp1.sinica.edu.tw</a>
-<li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a>
-<li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sources.redhat.com/pub/gcc/">ftp.mirror.ac.uk</a>, thanks to <a href="mailto:mirror@mirror.ac.uk">mirror@mirror.ac.uk</a>
-<li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/sourceware.cygnus.com/pub/gcc/">sunsite.doc.ic.ac.uk</a>
-<li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/sourceware.cygnus.com/pub/gcc/releases/">mirrors.laffeycomputer.com</a>
+<li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/gcc/">mirror.aarnet.edu.au</a></li>
+<li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/gcc/">gd.tuwien.ac.at</a></li>
+<li>Belgium (Ghent) (releases only, no snapshots): <a href="ftp://chardonnay.elis.rug.ac.be/pub/mirrors/gcc.cygnus.com/pub/gcc/">chardonnay.elis.rug.ac.be</a></li>
+<li>Brasil (releases only, no snapshots): <a href="ftp://ftp.softaplic.com.br/pub/sourceware/gcc/">ftp.softaplic.com.br</a></li>
+<li>China (Hong Kong): <a href="ftp://ftp.foruto.com/pub/gcc.gnu.org/gcc/">ftp.foruto.com</a></li>
+<li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/GNU/gcc/">sunsite.mff.cuni.cz</a></li>
+<li>Finland: <a href="ftp://ftp.funet.fi/pub/mirrors/sourceware.cygnus.com/pub/gcc/">ftp.funet.fi</a></li>
+<li>France (releases only, no snapshots): <a href="ftp://ftp.ilog.fr/pub/Mirrors/gcc/">ftp.ilog.fr</a></li>
+<li>France (releases only, no snapshots): <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a></li>
+<li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/gcc.gnu.org/gcc/">ftp.irisa.fr</a></li>
+<li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/egcs/">ftp.uvsq.fr</a></li>
+<li>France: <a href="ftp://ftp.grolier.fr/pub/egcs/">ftp.grolier.fr</a></li>
+<li>Germany (Berlin): <a href="ftp://ftp.fu-berlin.de/unix/languages/egcs/">ftp.fu-berlin.de</a>, thanks to <a href="mailto:leitner@math.fu-berlin.de">Felix von Leitner</a>!</li>
+<li>Germany: <a href="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a></li>
+<li>Germany: <a href="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/egcs.cygnus.com/pub/gcc/">ftp.mpi-sb.mpg.de</a></li>
+<li>Greece: <a href="ftp://ftp.ntua.gr/pub/gnu/egcs/">ftp.ntua.gr</a>,</li>
+<li>Japan: <a href="ftp://ftp.dti.ad.jp/pub/lang/egcs/">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!</li>
+<li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs/">ftp.eos.hokudai.ac.jp</a></li>
+<li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs/">ftp.lab.kdd.co.jp</a></li>
+<li>Japan: <a href="ftp://ftp.iij.ad.jp/pub/egcs/">ftp.iij.ad.jp</a></li>
+<li>Japan: <a href="ftp://ring.aist.go.jp/pub/lang/egcs/">ring.aist.go.jp</a></li>
+<li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs/">ring.etl.go.jp</a></li>
+<li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs/">ring.crl.go.jp</a></li>
+<li>Japan: <a href="ftp://core.ring.gr.jp/pub/lang/egcs/">core.ring.gr.jp</a></li>
+<li>Japan: <a href="ftp://ftp.ring.gr.jp/pub/lang/egcs/">ftp.ring.gr.jp</a></li>
+<li>Korea (Seoul): <a href="ftp://linux.sarang.net/mirror/development/compiler/egcs/">linux.sarang.net</a></li>
+<li>Nijmegen, Netherlands: <a href="ftp://ftp.nluug.nl/mirror/languages/gcc">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!</li>
+<li>Norway: <a href="ftp://ftp.pvv.ntnu.no/pub/egcs/">ftp.pvv.ntnu.no</a></li>
+<li>Poland: <a href="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs/">ftp.task.gda.pl</a></li>
+<li>Poland (Warsaw): <a href="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a></li>
+<li>Poland (Lodz): <a href="ftp://ftp.fic.uni.lodz.pl/pub/sources.redhat.com/pub/gcc/">ftp.fic.uni.lodz.pl</a></li>
+<li>Romania: <a href="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs/">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!</li>
+<li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs/">ftp.nc.orc.ru</a></li>
+<li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs/">linux.ihep.su</a></li>
+<li>South Africa: <a href="ftp://ftp.sun.ac.za/cygnus/gcc/">ftp.sun.ac.za</a></li>
+<li>Sweden: <a href="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a></li>
+<li>Sweden: <a href="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a></li>
+<li>Sweden: <a href="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a></li>
+<li>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub3/CYGNUS/gcc/">ftp1.sinica.edu.tw</a></li>
+<li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a></li>
+<li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sources.redhat.com/pub/gcc/">ftp.mirror.ac.uk</a>, thanks to <a href="mailto:mirror@mirror.ac.uk">mirror@mirror.ac.uk</a></li>
+<li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/sourceware.cygnus.com/pub/gcc/">sunsite.doc.ic.ac.uk</a></li>
+<li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/sourceware.cygnus.com/pub/gcc/releases/">mirrors.laffeycomputer.com</a></li>
 </ul>
 
 <p>If you wish to host a new mirror site, please contact
 <a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a>.  Include the
 name of the server, the path to the GCC mirror and the country/city
-where the mirror is located.
+where the mirror is located.</p>
 
 <!-- <li>US (Merrifield, VA): <a href="ftp://mirrors.rcn.com:/pub/egcs/">mirrors.rcn.com</a>! !-->
-<!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal) (snapshots only)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> !-->
-<!-- <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!<BR>! !-->
+<!-- <li><a href="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal) (snapshots only)</a>, thanks to <a href="mailto:draggy@kosmic.org">Nicolas St-Pierre</a>!<br /> !-->
+<!-- <li><a href="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</a>, thanks to <a href="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</a>!<br />! !-->
 <!-- <li>Japan: <a href="ftp://ftp.win.or.jp/pub/lang/egcs">ftp.win.or.jp</a> !-->
 <!-- <li>Russia (Moscow, partial):<a href="ftp://kiarchive.relcom.ru/pub/gnu/egcs/">kiarchive.relcom.ru</a> !-->
 <!-- <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a> !-->
