--- a/htdocs/spam.html
+++ b/htdocs/spam.html
@@ -9,14 +9,14 @@
 
 <p>Occasionally some bozo decides to spam the GCC mailing lists.  While we
 wish this would not happen, it is a fact of life on an open list (we do not
-want to run a list where only members can post).
+want to run a list where only members can post).</p>
 
 <p>Some simple guidelines for how to deal with SPAM to the lists can help
-avoid creating unnecessary traffic on the list.
+avoid creating unnecessary traffic on the list.</p>
 
 <p> In additional to the information provided below, you might want to check
 out <a href="http://www.abuse.net">www.abuse.net</a> for further information
-about SPAM.
+about SPAM.</p>
 
 <pre>
   -  NEVER respond to SPAM, no matter *what* the message says about
