Remove "was:" comment with old markup.  Update option-list format strings

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -6,7 +6,7 @@
 
 <body>
 <h1><a href="index.html">GCC</a> detailed search</h1>
-<hr /><!-- was: <hr noshade size=1> -->
+<hr />
 <form method="get" action="http://gcc.gnu.org/cgi-bin/htsearch">
 <font size="-1">
 Match: <select name="method">
@@ -32,7 +32,7 @@ Sort by: <select name="sort">
 <input type="submit" value="Search:" />
 <input type="text" size="50" name="words" value="" />
 <br />
-<hr /><!-- was: <hr noshade size=1> -->
+<hr />
 <!-- Synopsis: Optionally restrict the search.  One fairly general
      select-menu and detailed choices for each different web-area.
      For the mailing lists, may select by list or by specific month for a
@@ -122,7 +122,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align="left">
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc/@%Y@-@%m@@qq@@gt@@%b@ @%Y@@lt@/option@gt@ -->
 <option value="gcc/2002-01">Jan 2002</option>
 <option value="gcc/2001-12">Dec 2001</option>
 <option value="gcc/2001-11">Nov 2001</option>
@@ -178,7 +178,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc/1997-09">Sep 1997</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-bugs/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-bugs/@%Y@-@%m@@qq@@gt@@%b@ @%Y@@lt@/option@gt@ -->
 <option value="gcc-bugs/2002-01">Jan 2002</option>
 <option value="gcc-bugs/2001-12">Dec 2001</option>
 <option value="gcc-bugs/2001-11">Nov 2001</option>
@@ -234,7 +234,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-bugs/1997-09">Sep 1997</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-patches/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-patches/@%Y@-@%m@@qq@@gt@@%b@ @%Y@@lt@/option@gt@ -->
 <option value="gcc-patches/2002-01">Jan 2002</option>
 <option value="gcc-patches/2001-12">Dec 2001</option>
 <option value="gcc-patches/2001-11">Nov 2001</option>
@@ -282,7 +282,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-patches/1998-05">May 1998</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-help/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-help/@%Y@-@%m@@qq@@gt@@%b@ @%Y@@lt@/option@gt@ -->
 <option value="gcc-help/2002-01">Jan 2002</option>
 <option value="gcc-help/2001-12">Dec 2001</option>
 <option value="gcc-help/2001-11">Nov 2001</option>
@@ -315,7 +315,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-help/1999-q3">Jul-Sep 1999</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-cvs/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-cvs/@%Y@-@%m@@qq@@gt@@%b@ @%Y@@lt@/option@gt@ -->
 <option value="gcc-cvs/2002-01">Jan 2002</option>
 <option value="gcc-cvs/2001-12">Dec 2001</option>
 <option value="gcc-cvs/2001-11">Nov 2001</option>
@@ -363,7 +363,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-cvs/1998-05">May 1998</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-testresults/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-testresults/@%Y@-@%m@@qq@@gt@@%b@ @%Y@@lt@/option@gt@ -->
 <option value="gcc-testresults/2002-01">Jan 2002</option>
 <option value="gcc-testresults/2001-12">Dec 2001</option>
 <option value="gcc-testresults/2001-11">Nov 2001</option>
@@ -424,7 +424,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align="left">
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-regression/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@gcc-regression/@%Y@-@%m@@qq@@gt@@%b@ @%Y@@lt@/option@gt@ -->
 <option value="gcc-regression/2002-01">Jan 2002</option>
 <option value="gcc-regression/2001-12">Dec 2001</option>
 <option value="gcc-regression/2001-11">Nov 2001</option>
@@ -448,7 +448,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-regression/2000-05">May 2000</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@gcc-prs/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@ -->
+<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@gcc-prs/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@@lt@/option@gt@ -->
 <option value="gcc-prs/2002-q1">Jan-Mar 2002</option>
 <option value="gcc-prs/2001-q4">Oct-Dec 2001</option>
 <option value="gcc-prs/2001-q3">Jul-Sep 2001</option>
@@ -464,7 +464,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-prs/1999-q1">Jan-Mar 1999</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-YEARLY@ @lt@option value=@qq@gcc-announce/@%Y@@qq@@gt@@%Y@ -->
+<!-- @UPDATE-YEARLY@ @lt@option value=@qq@gcc-announce/@%Y@@qq@@gt@@%Y@@lt@/option@gt@ -->
 <option value="gcc-announce/2002">2002</option>
 <option value="gcc-announce/2001">2001</option>
 <option value="gcc-announce/2000">2000</option>
@@ -472,7 +472,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-announce/1997-1998">1997-8</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-YEARLY@ @lt@option value=@qq@gcc-cvs-wwwdocs/@%Y@@qq@@gt@@%Y@ -->
+<!-- @UPDATE-YEARLY@ @lt@option value=@qq@gcc-cvs-wwwdocs/@%Y@@qq@@gt@@%Y@@lt@/option@gt@ -->
 <option value="gcc-cvs-wwwdocs/2002">2002</option>
 <option value="gcc-cvs-wwwdocs/2001">2001</option>
 <option value="gcc-cvs-wwwdocs/2000">2000</option>
@@ -496,7 +496,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align="left">
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@libstdc++/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@libstdc++/@%Y@-@%m@@qq@@gt@@%b@ @%Y@@lt@/option@gt@ -->
 <option value="libstdc++/2002-01">Jan 2002</option>
 <option value="libstdc++/2001-12">Dec 2001</option>
 <option value="libstdc++/2001-11">Nov 2001</option>
@@ -524,7 +524,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="libstdc++/1999-q1">Jan-Mar 1999</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@libstdc++-cvs/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@ -->
+<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@libstdc++-cvs/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@@lt@/option@gt@ -->
 <option value="libstdc++-cvs/2002-q1">Jan-Mar 2002</option>
 <option value="libstdc++-cvs/2001-q4">Oct-Dec 2001</option>
 <option value="libstdc++-cvs/2001-q3">Jul-Sep 2001</option>
@@ -538,7 +538,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="libstdc++-cvs/1999-q3">Jul-Sep 1999</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@libstdc++-prs/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@ -->
+<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@libstdc++-prs/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@@lt@/option@gt@ -->
 <option value="libstdc++-prs/2002-q1">Jan-Mar 2002</option>
 <option value="libstdc++-prs/2001-q4">Oct-Dec 2001</option>
 <option value="libstdc++-prs/2001-q3">Jul-Sep 2001</option>
@@ -573,7 +573,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align="left">
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@java/@%Y@-@%m@@qq@@gt@@%b@ @%Y@ -->
+<!-- @UPDATE-MONTHLY@ @lt@option value=@qq@java/@%Y@-@%m@@qq@@gt@@%b@ @%Y@@lt@/option@gt@ -->
 <option value="java/2002-01">Jan 2002</option>
 <option value="java/2001-12">Dec 2001</option>
 <option value="java/2001-11">Nov 2001</option>
@@ -607,7 +607,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="java/1998-09">Sep 1998</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@java-patches/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@ -->
+<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@java-patches/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@@lt@/option@gt@ -->
 <option value="java-patches/2002-q1">Jan-Mar 2002</option>
 <option value="java-patches/2001-q4">Oct-Dec 2001</option>
 <option value="java-patches/2001-q3">Jul-Sep 2001</option>
@@ -622,7 +622,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="java-patches/1999-q2">Apr-Jun 1999</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@java-prs/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@ -->
+<!-- @UPDATE-QUARTERLY@ @lt@option value=@qq@java-prs/@%Y@-q@Q@@qq@@gt@@Q-M@ @%Y@@lt@/option@gt@ -->
 <option value="java-prs/2002-q1">Jan-Mar 2002</option>
 <option value="java-prs/2001-q4">Oct-Dec 2001</option>
 <option value="java-prs/2001-q3">Jul-Sep 2001</option>
@@ -636,7 +636,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="java-prs/1999-q3">Jul-Sep 1999</option>
 </select></td>
 <td><select name="restrict" multiple="multiple" size="6">
-<!-- @UPDATE-YEARLY@ @lt@option value=@qq@java-announce/@%Y@@qq@@gt@@%Y@ -->
+<!-- @UPDATE-YEARLY@ @lt@option value=@qq@java-announce/@%Y@@qq@@gt@@%Y@@lt@/option@gt@ -->
 <option value="java-announce/2002">2002</option>
 <option value="java-announce/2001">2001</option>
 <option value="java-announce/2000">2000</option>
@@ -648,7 +648,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <input type="reset" />
 </p>
 </form>
-<hr /><!-- was: <hr noshade size=1> -->
+<hr />
 
 <a name="syntax"></a>
 
@@ -663,7 +663,7 @@ parentheses <b>()</b> are separated by the operator-words <b>and</b>,
 </ul>
 Note that the operator <b>not</b> is binary, having the meaning of
 'without'.
-<hr /><!-- was: <hr noshade size=1> -->
+<hr />
 
 <em>Database last updated</em>
 
@@ -674,7 +674,7 @@ Note that the operator <b>not</b> is binary, having the meaning of
 >
 <add 1900 <get-var x::READ[2]>>-<get-var x::READ[0]>-<get-var x::READ[1]>
 
-<hr /><!-- was: <hr noshade size=1> -->
+<hr />
 <a href="http://www.htdig.org">
 <img src="/htdig/htdig.jpeg" alt="ht://Dig" border="0" />ht://Dig</a>
 search engine.
