Add the following entries:   i586-pc-linux-gnu (Red Hat 7.1, glibc 2.2.4, kernel 2.4.9) for 3.0.   i686-pc-linux-gnu (Mandrake 8.1, glibc 2.2.4, kernel 2.4.17) for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -303,6 +303,13 @@ Unsuccessful:
 </tr>
 
 <tr>
+<td>i586-pc-linux-gnu</td>
+<td>Red Hat 7.1, glibc 2.2.4, kernel 2.4.9</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01365.html">3.0</a></td>
+</tr>
+
+<tr>
 <td>i586-pld-linux-gnu</td>
 <td>PLD devel 1.0, glibc 2.2.3, kernel 2.2.19</td>
 <td>Successful:
@@ -380,6 +387,13 @@ Unsuccessful:
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00843.html">3.0.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01330.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Mandrake 8.1, glibc 2.2.4, kernel 2.4.17</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01332.html">3.0.3</a></td>
 </tr>
 
 <tr>
