Add section for 3.0.4 changes

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC 3.0 New Features</h1>
+<h1>GCC 3.0 New Features</h1>
 
 <ul>
   <li>General Optimizer Improvements:
@@ -174,6 +174,21 @@
     <li>A fix to avoid crashes in the C++ demangler.</li>
     <li>A fix to the C++ standard library to avoid buffer overflows.</li>
     <li>Miscellaneous improvements for a variety of architectures.</li>
+  </ul></li>
+
+  <li>Additional changes in GCC 3.0.4
+  <ul>
+    <li>GCC 3.0 now supports newer versions of the <a
+        href="http://www.netbsd.org/">NetBSD</a> operating system,
+        which use the ELF object file format, on x86 processors.</li>
+    <li>Correct debugging information is generated from functions
+        that have lines from multiple files (e.g. yacc output).</li>
+    <li>A fix for whitespace handling in the <code>-traditional</code>
+        preprocessor, which can affect Fortran.</li>
+    <li>Fixes to the exception handling runtime.</li>
+    <li>More fixes for bad code generation in C++.</li>
+    <li>A fix for shared library generation under AIX 4.3.</li>
+    <li>Documentation updates.</li>
   </ul></li>
 
 </ul>
